fixed nav dropdown overflow issue

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -103,7 +103,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Roboto', sans-serif;
-    width: 100svw;
+    max-width: 100svw;
 }
 
 .nav {
@@ -177,6 +177,24 @@ img.logo {
     align-self: end;
 }
 
+.nav__section.nav__section--user .dropdown {
+    position: relative;
+}
+
+.dropdown .dropdown-menu {
+    position:absolute;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    transform: translateY(-10%);
+    transition: all 0.15s ease-in-out;
+    opacity: 0;
+    background-color:#141d24;
+    border-radius: 0.4rem;
+    pointer-events: none;
+}
+
 .dropdown:hover .dropdown-menu {
     opacity: 1;
     transform: translateY(0%);
@@ -223,27 +241,6 @@ img.logo {
     box-shadow: 4px 4px 16px rgb(0 0 0 / 0.5);
     transform: scale(1.05);
 }
-
-.nav__section.nav__section--user .dropdown {
-    position: relative;
-}
-
-.dropdown .dropdown-menu {
-    position:absolute;
-    display: flex;
-    flex-direction: column;
-    gap: 0.3rem;
-    transform: translateY(-10%);
-    /* width: 200%; */
-    left: 0;
-    /* transform: translateX(-10%); */
-    transition: all 0.15s ease-in-out;
-    opacity: 0;
-    background-color:#141d24;
-    border-radius: 0.4rem;
-    pointer-events: none;
-}
-
 
 /* HERO SECTION */
 
@@ -352,4 +349,5 @@ img.logo {
 
 .footer {
     margin-top: 3rem;
+    max-width: 100%;
 }
